--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -7,7 +7,7 @@
 }
 
 .about-us__title {
-  margin: 34px 0 31px 0;
+  margin: 0 0 31px 0;
 }
 
 .about-us__list {
@@ -27,4 +27,52 @@
   font-weight: bold;
   line-height: 1.18;
   margin: 0;
+}
+
+@media (min-width: 768px) {
+  .about-us {
+    margin-bottom: 31px;
+  }
+
+  .about-us__title {
+    font-size: 43px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
+
+  .about-us__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .about-us__item {
+    &:nth-of-type(odd) {
+      margin-right: 50px;
+    }
+    width: 300px;
+  }
+
+  .about-us__item:not(:last-of-type) {
+    margin-bottom: 60px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .about-us {
+    margin-bottom: 31px;
+  }
+
+  .about-us__title {
+    padding-left: 175px;
+  }
+
+  .about-us__list {
+    padding-left: 175px;
+  }
+
+  .about-us__item {
+    &:nth-of-type(odd) {
+      margin-right: 145px;
+    }
+  }
 }
