--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -65,7 +65,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      background: url('https://via.placeholder.com/150x150');
+      background-image: url("https://via.placeholder.com/150x150");
       width: 50px;
       height: 50px;
     }
@@ -106,7 +106,7 @@
       position: absolute;
       top: 0;
       left: 40px;
-      background: url('https://via.placeholder.com/150x150');
+      background: url("https://via.placeholder.com/150x150");
       width: 50px;
       height: 50px;
     }
