--- a/12/css/style.css
+++ b/12/css/style.css
@@ -707,7 +707,7 @@ body {
       position: absolute;
       top: 0;
       right: 0;
-      background: url("https://via.placeholder.com/150x150");
+      background-image: url("https://via.placeholder.com/150x150");
       width: 50px;
       height: 50px; }
   .contacts__info {
