--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -59,6 +59,7 @@
 @media (min-width: 768px) {
   .handwork {
     background: url("../img/hero-tablet@1x.jpg") no-repeat center top;
+    box-shadow: inset 0 -1px 0 1px #f9f9f9, inset 0 0 0 1px rgba(68, 68, 68, 0.2);
   }
 
   .handwork__title {
