--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -27,3 +27,13 @@ footer {
 .footer__line {
   margin: 27px 0;
 }
+
+.footer__logo {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .footer__logo {
+    display: block;
+  }
+}
