--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -19,3 +19,12 @@
     margin: 0 auto;
   }
 }
+
+@media (min-width: 1150px) {
+  .header__inner {
+    display: flex;
+    width: 1050px;
+    padding: 0 50px;
+    margin: 0 auto;
+  }
+}
