--- a/12/css/style.css
+++ b/12/css/style.css
@@ -80,18 +80,30 @@ body {
     padding: 0 50px;
     margin: 0 auto; } }
 
+@media (min-width: 1150px) {
+  .header__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 1050px;
+    padding: 0 50px;
+    margin: 0 auto; } }
+
 .menu__list {
   margin: 0;
   padding: 0;
-  list-style: none; }
+  list-style: none;
+  position: relative; }
+
+.menu__list-new,
+.menu__list-delivery {
+  display: none; }
 
 .menu__item {
   width: auto;
   -webkit-box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
           box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
   padding: 32px 0 32px 76px; }
-  .menu__item:last-child {
-    display: none; }
 
 .menu__link {
   position: relative;
@@ -127,24 +139,79 @@ body {
   right: 0; }
 
 @media (min-width: 768px) {
-  .menu__btn {
-    display: none; }
-  .header__menu {
+  .logo {
+    margin-right: auto; }
+  .menu {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex; }
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
   .menu__list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap; }
-  .menu__link {
+  .menu__list-delivery {
+    display: block;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin-top: 25px; }
+  .menu__list-catalog-order {
+    margin-right: auto;
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
-            order: 1; }
-  .menu__item-delivery {
-    display: block; } }
+            order: 1;
+    font-size: 15px;
+    margin-top: 25px; }
+  .menu__item {
+    -ms-flex-item-align: center;
+        align-self: center;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    padding: 0; }
+  .menu__link-catalog {
+    margin-right: 37px;
+    font-size: 15px; }
+  .menu__link-order {
+    font-size: 15px; }
+  .menu__list-new {
+    display: none; }
+  .menu__link-search {
+    margin-right: 60px; }
+  .menu__link-delivery {
+    font-size: 15px;
+    font-weight: normal;
+    line-height: 1.6;
+    color: #444444; }
+  .menu__btn {
+    display: none; } }
+
+@media (min-width: 1150px) {
+  .menu__list-new {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: auto; }
+  .menu__link-new {
+    font-size: 15px; }
+    .menu__link-new:first-of-type {
+      margin-right: 63px; }
+  .menu__list-delivery,
+  .menu__list-new {
+    margin-top: 25px; }
+  .menu__list-catalog-order {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin: 0 75px 0 0; }
+  .menu__link-catalog,
+  .menu__link-order {
+    font-size: 17px; }
+  .menu__link-catalog {
+    margin-right: 71px; } }
 
 .handwork {
   margin-bottom: 34px;
@@ -221,7 +288,10 @@ body {
 
 @media (min-width: 768px) {
   .handwork {
-    background: url("../img/hero-tablet@1x.jpg") no-repeat center top; }
+    background: url("../img/hero-tablet@1x.jpg") no-repeat center top;
+    -webkit-box-shadow: inset 0 -1px 0 1px #f9f9f9, inset 0 0 0 1px rgba(68, 68, 68, 0.2);
+            box-shadow: inset 0 -1px 0 1px #f9f9f9, inset 0 0 0 1px rgba(68, 68, 68, 0.2);
+    margin-top: -50px; }
   .handwork__title {
     min-height: 630px; }
     .handwork__title .handwork__text {
@@ -251,6 +321,7 @@ body {
 
 @media (min-width: 1150px) {
   .handwork {
+    margin-top: -50px;
     margin-bottom: 140px; }
   .handwork__text {
     width: 615px;
@@ -790,9 +861,7 @@ footer {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap; }
-
-.social__item {
+      flex-wrap: wrap;
   padding-top: 25px; }
 
 .footer__copyright {
@@ -807,6 +876,54 @@ footer {
 
 .footer__line {
   margin: 27px 0; }
+
+.footer__logo {
+  display: none; }
+
+@media (min-width: 768px) {
+  .footer__line {
+    display: none; }
+  .footer__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px; }
+  .footer__logo {
+    display: block; }
+  .footer__copyright {
+    -ms-flex-item-align: center;
+        align-self: center;
+    padding: 0;
+    font-size: 19px; }
+  .social__list {
+    -webkit-box-pack: unset;
+        -ms-flex-pack: unset;
+            justify-content: unset;
+    margin-right: -58px;
+    padding: 0; }
+  .social__item:not(:last-of-type) {
+    margin-right: 40px; }
+  .copyright__text {
+    -ms-flex-item-align: center;
+        align-self: center;
+    margin-right: 30px; } }
+
+@media (min-width: 1150px) {
+  .footer__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .footer__logo {
+    display: block; } }
 
 .modal {
   display: none;
