--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -21,7 +21,7 @@
   min-height: 300px;
 }
 
-.handwork__text-category {
+.handwork__category {
   width: 105px;
   font-size: 19px;
   font-weight: bold;
@@ -87,7 +87,7 @@
   }
 
   .handwork__goods {
-    .handwork__text-category {
+    .handwork__category {
       font-size: 20px;
     }
 
@@ -125,7 +125,7 @@
     }
   }
 
-  .handwork__text-category {
+  .handwork__category {
     padding: 35px 0;
   }
 }
