fix price class

--- a/source/sass/blocks/baskets.scss
+++ b/source/sass/blocks/baskets.scss
@@ -45,7 +45,7 @@
   @include reset-list;
 }
 
-.baskets__prise {
+.baskets__price {
   text-align: center;
   font-size: 17px;
   font-weight: bold;
@@ -103,7 +103,7 @@
     padding: 0 28px 0 0;
   }
 
-  .baskets__prise {
+  .baskets__price {
     margin: 0 auto 28px auto;
   }
 
