fix class desktop

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -49,7 +49,7 @@
   transform: translate(-50px, -33.5px);
 }
 
-.contacts__map-desctop,
+.contacts__map-desktop,
 .contacts__map-tablet {
   display: none;
 }
@@ -126,7 +126,7 @@
     display: none;
   }
 
-  .contacts__map-desctop {
+  .contacts__map-desktop {
     display: block;
   }
 
