fix transform(position) for modal

--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-160px, -176px);
+  transform: translate(-50%, -50%);
   width: 318px;
   margin: auto;
   background-color: #ffffff;
