deleted padding and created new pos.

--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -62,13 +62,13 @@
     margin-bottom: 30px;
   }
 
-  .about-us__title {
-    padding-left: 175px;
+  .about-us__wrapper {
+    width: 700px;
+    margin: 0 auto;
   }
 
   .about-us__list {
     width: 700px;
-    padding-left: 175px;
     justify-content: space-between;
   }
 }
