fix bugs and menu

--- a/source/sass/base/layout.scss
+++ b/source/sass/base/layout.scss
@@ -30,6 +30,11 @@ body {
   color: #000000;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .page-title {
   font-size: 26.5px;
   font-weight: bold;
