fix width for inner

--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -32,6 +32,10 @@
   padding-top: 8px;
 }
 
+.handwork__inner.handwork__flex-g {
+  flex-grow: 1;
+}
+
 .handwork__interior {
   background-color: #63d1bb;
 }
