--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -1,9 +1,11 @@
 @mixin inner {
-  width: 100%;
+  width: auto;
   margin: 0 auto;
+  padding: 0 30px;
 
   @media (min-width: 768px) {
-    width: 85%;
+    width: auto;
+    padding: 0 50px;
   }
 
   @media (min-width: 1150px) {
