--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -35,7 +35,7 @@
   margin: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .about-us {
     margin-bottom: 30px;
   }
@@ -60,7 +60,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: $desktop-width) {
   .about-us__wrapper {
     width: 700px;
     margin: 0 auto;
