--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -29,7 +29,7 @@ footer {
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .footer__line {
     display: none;
   }
@@ -69,7 +69,7 @@ footer {
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: $desktop-width) {
   .footer__logo {
     display: block;
   }
