--- a/source/sass/blocks/baskets.scss
+++ b/source/sass/blocks/baskets.scss
@@ -66,7 +66,7 @@
   margin: 0 auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .baskets {
     margin-bottom: 100px;
   }
@@ -115,7 +115,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: $desktop-width) {
   .baskets__wrapper {
     width: 700px;
     margin: 0 auto;
