--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -62,7 +62,7 @@
 }
 
 // Media tablet
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .handwork {
     background: url("../img/hero-tablet@1x.jpg") no-repeat center top;
     box-shadow: inset 0 -1px 0 1px #f9f9f9, inset 0 0 0 1px rgba(68, 68, 68, 0.2);
@@ -106,7 +106,7 @@
   }
 }
 // Media Desktop
-@media (min-width: 1150px) {
+@media (min-width: $desktop-width) {
   .handwork {
     margin-top: -50px;
     margin-bottom: 140px;
