--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -15,6 +15,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: baseline;
 }
 
 .about-us__image {
@@ -57,6 +58,11 @@
 
   .about-us__item:not(:last-of-type) {
     margin-bottom: 60px;
+  }
+
+  .about-us__text {
+    font-size: 20px;
+    line-height: 1.1;
   }
 }
 
