--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -68,8 +68,8 @@
 
 @media (min-width: $desktop-width) {
   .about-us__wrapper {
-    width: 700px;
-    margin: 0 auto;
+    width: 875px;
+    margin-left: auto;
   }
 
   .about-us__list {
