--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -25,7 +25,7 @@
   font-size: 17px;
   font-weight: bold;
   line-height: 1.41;
-  margin: 0 0 5px 0;
+  margin: 0;
 }
 
 .reviews__account {
@@ -34,9 +34,10 @@
   font-size: 17px;
   line-height: 1.76;
   color: $color-danger;
-  margin-bottom: 36px;
+  margin: 0;
 }
 
+.reviews__user,
 .reviews__slide {
   margin-bottom: 38px;
 }
