creates a new mixin for the cover page and fixes errors

--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -30,3 +30,11 @@
   background-color: transparent;
   cursor: pointer;
 }
+
+@mixin page-title {
+  width: 248px;
+  font-size: 27px;
+  font-weight: bold;
+  line-height: 1.11;
+  text-align: center;
+}
