--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -6,8 +6,14 @@
   @include inner;
 }
 
-.title__text-form {
-  padding: 76px 0;
+.form__title-page {
+  background-color: #f1f1f1;
+}
+
+.form__page-text {
+  @include page-title;
+  padding: 90px 0;
+  margin: 0 auto;
 }
 
 .form__text {
