--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -6,14 +6,16 @@
   @include inner;
 }
 
-.title__text {
-  font-size: 27px;
-  font-weight: bold;
-  line-height: 1.11;
-  text-align: center;
-  padding: 76px 0;
+.catalog__title-page {
   background-color: #f1f1f1;
-  margin: 0;
+}
+
+.catalog__page-text {
+  @include page-title;
+  display: flex;
+  align-items: center;
+  padding: 90px 0;
+  margin: 0 auto;
 }
 
 .catalog__list {
