--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -7,8 +7,10 @@
 }
 
 .form__title-page {
+  @media (min-width: 768px) {
+    margin-top: -55px;
+  }
   background-color: #f1f1f1;
-  margin-top: -55px;
 }
 
 .form__page-text {
