--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -108,6 +108,7 @@
 // Media Desktop
 @media (min-width: $desktop-width) {
   .handwork {
+    background-color: rgb(249, 249, 249);
     margin-top: -50px;
     margin-bottom: 140px;
   }
