--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -7,13 +7,22 @@
 }
 
 .form__title-page {
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     margin-top: -55px;
   }
   background-color: #f1f1f1;
 }
 
 .form__page-text {
+  @media (min-width: $tablet-width) {
+    font-size: 43px;
+    width: 500px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 53px;
+  }
+
   @include page-title;
   padding: 90px 0;
   margin: 0 auto;
