--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -3,11 +3,12 @@
   padding: 0 30px;
 
   @media (min-width: $tablet-width) {
+    width: 668;
     padding: 0 50px;
   }
 
   @media (min-width: $desktop-width) {
-    max-width: 1150px;
+    width: 1050px;
   }
 }
 
